--- a/Orders/Orders.Backend/appsettings.json
+++ b/Orders/Orders.Backend/appsettings.json
@@ -3,11 +3,17 @@
     "DockerConnection": "Data Source=.;Initial Catalog=Orders;User ID={Your user};Password={Your password};Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
     "LocalConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Orders;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+  "jwtKey": ";lsdakf;lvfdkljg;lgf';lhf;lmgdflkmdaf;l,';gfd;lgdsklfadsknfdr;ltrlertjerwoij409u69i4erpote40toergkpewrokgpdsjldfs;lg;dskg",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "runtimeOptions": {
+    "configProperties": {
+      "System.Globalization.Invariant": false
+    }
+  }
 }
